--- a/package.json
+++ b/package.json
@@ -21,5 +21,12 @@
   "bugs": {
     "url": "https://github.com/Hybris95/PlugDJ-vs-Discord-Bot/issues"
   },
-  "homepage": "https://github.com/Hybris95/PlugDJ-vs-Discord-Bot#readme"
+  "homepage": "https://github.com/Hybris95/PlugDJ-vs-Discord-Bot#readme",
+  "dependencies": {
+    "config": "^1.24.0",
+    "discord.js": "^10.0.1",
+    "node-opus": "^0.2.4",
+    "opusscript": "0.0.1",
+    "plugapi": "^4.2.3"
+  }
 }
